--- a/roll.css
+++ b/roll.css
@@ -1,4 +1,4 @@
-/* 
+/*
     Document   : roll
     Created on : Jan 18, 2013, 3:00:10 PM
     Author     : t_tranm
@@ -6,57 +6,90 @@
         Purpose of the stylesheet follows.
 */
 
-*{
-    -webkit-user-select: none;
+* {
+  -webkit-user-select: none;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
-#mainCanvas{
-    cursor: crosshair;
+h2 {
+  color: #696969;
 }
-root { 
-    display: block;
+.center {
+  text-align: center;
 }
-#canvasContainer{
-    width: 1000px;
-    margin: auto;
-    margin-top: 0px;
-}
-#mainCanvas{
-    margin: auto;
-    
-}
-button{
-    background: black;
-    color: white;
-    border: none;
-    border-radius: 2px;
-    position: absolute;
-    left: 50px;
-    width: 100px;
-    height: 50px;
-    margin: 20px;
-}
-#brush{top: 10px;}
-#eraser{top: 70px;}
-#jump{top: 130px;}
-#backward{top: 190px;}
-#forward{top: 250px;}
 
-button:hover{
-    background: #CCC;
-    color: black;
+#mainCanvas {
+  cursor: crosshair;
+  border: 1px dashed #ac4545;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
-button:active{
-    background: #EEE;
-    color: black;
+
+root {
+  display: block;
 }
-#buttonHolder{
-    top: 0px;
-    left: 0px;
-    position: absolute;
-    width: 280px;
+
+#canvasContainer {
+  width: 500px;
+  margin: auto;
+  margin-top: 30px;
 }
-#debug{
-    position: absolute;
-    top: 20px;
-    left: 20px;
+
+button {
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 2px;
+  position: absolute;
+  left: 50px;
+  width: 100px;
+  height: 50px;
+  margin: 20px;
+}
+
+#brush {
+  display: none;
+  top: 10px;
+}
+
+#eraser {
+  display: none;
+  top: 70px;
+}
+
+#jump {
+  display: none;
+  top: 130px;
+}
+
+#backward {
+  top: 10px;
+}
+
+#forward {
+  display: none;
+  top: 250px;
+}
+
+button:hover {
+  background: #CCC;
+  color: black;
+}
+
+button:active {
+  background: #EEE;
+  color: black;
+}
+
+#buttonHolder {
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  width: 280px;
+}
+
+#debug {
+  position: absolute;
+  top: 20px;
+  left: 20px;
 }
